# torosamy_rudder_warrior

./: .gitignore  build.sh  package.sh  start.sh  version.txt
torosamy_automatic_aiming/: CMakeLists.txt
torosamy_automatic_aiming/include/torosamy_automatic_aiming/: ArmorModule.h  FunctionController.h  HeartJumpModule.h
torosamy_automatic_aiming/include/torosamy_automatic_aiming/armor/: Armor.h  ArmorFilter.h  ArmorManager.h  ArmorPnpResult.h
torosamy_automatic_aiming/include/torosamy_automatic_aiming/handler/: FireControlHandler.h  LostFrameHandler.h
torosamy_automatic_aiming/include/torosamy_automatic_aiming/handler/classify/: ClassifyHandler.h  (+2 more)
torosamy_automatic_aiming/include/torosamy_automatic_aiming/light/: Light.h  LightFactory.h  LightFilter.h  LightManager.h
torosamy_automatic_aiming/include/torosamy_automatic_aiming/packet/: ReceiveDataPacket.h  SendDataPacket.h
torosamy_automatic_aiming/src/: ArmorModule.cpp  FunctionController.cpp  HeartJumpModule.cpp  main.cpp
torosamy_automatic_aiming/src/armor/: Armor.cpp  ArmorFilter.cpp  ArmorManager.cpp  ArmorPnpResult.cpp
torosamy_automatic_aiming/src/handler/: FireControlHandler.cpp  LostFrameHandler.cpp
torosamy_automatic_aiming/src/handler/classify/: ClassifyHandler.cpp  DigitFilter.cpp  OnnxFilter.cpp
torosamy_automatic_aiming/src/handler/predict/: MotionPredicter.cpp  PointPredicter.cpp  PredictHandler.cpp
torosamy_automatic_aiming/src/light/: Light.cpp  LightFactory.cpp  LightFilter.cpp  LightManager.cpp
torosamy_automatic_aiming/src/packet/: ReceiveDataPacket.cpp  SendDataPacket.cpp
(+24 files in other folders)
